will this finally resolve the bottom spacing issue

--- a/src/components/atoms/_videoWrapper.scss
+++ b/src/components/atoms/_videoWrapper.scss
@@ -26,7 +26,6 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  bottom: 0;
   background-color: #D2BFAE;
   overflow-y: scroll;
 
